--- a/src/assets/img/svg.html
+++ b/src/assets/img/svg.html
@@ -9,14 +9,27 @@
 <h1>Иконка из SVG-спрайта</h1>
 
 <!-- Вставка иконки -->
-<!--<svg width="30" height="30">-->
-<!--    <use xlink:href="icon-sprite.svg#inst"></use>-->
+<svg width="30" height="30">
+    <use xlink:href="icon-sprite.svg#inst"></use>
 
-<!--</svg>-->
+</svg>
 
 <svg width="30" height="30">
     <use xlink:href="Linkedin.svg#Linkedin"></use>
 
+</svg>
+
+
+<svg width="100" height="100">
+    <use xlink:href="./.svg#circle"/>
+</svg>
+
+<svg width="100" height="100">
+    <use xlink:href="./test-sprite.svg#square"/>
+</svg>
+
+<svg width="100" height="100">
+    <use xlink:href="./test-sprite.svg#triangle"/>
 </svg>
 
 </body>
